--- a/index.html
+++ b/index.html
@@ -582,7 +582,17 @@ function formatDate(date) {
 
         <section>
           <div style="margin: auto">
-            <h2>clarity</h2>
+            <h2
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 0.25em;
+              "
+            >
+              clarity
+              <img src="images/250px-Blooper_MK7.webp" style="width: 100px" />
+            </h2>
             <div style="display: flex; gap: 1rem; font-size: 0.9em">
               <pre style="align-self: stretch"><code class="jsx" data-noescape>
 it("increments the number", () => {
@@ -622,7 +632,17 @@ it("increments the number", () => {
 
         <section>
           <div style="margin: auto; width: 100%">
-            <h2>No attributes</h2>
+            <h2
+              style="
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 0.25em;
+              "
+            >
+              No attributes
+              <img src="images/1200px-RedShellMK8.webp" style="width: 100px" />
+            </h2>
             <pre
               style="font-size: 0.4em"
             ><code class="jsx" data-noescape>function Clickymajig() {
@@ -689,7 +709,21 @@ exports[`Clickymajig unchecks the checkbox after 2 seconds 1`] = `
         </section>
 
         <section>
-          <h1 style="font-size: 4em; margin: auto">no TDD 😞</h1>
+          <h1
+            style="
+              font-size: 4em;
+              margin: auto;
+              display: flex;
+              align-items: center;
+              gap: 0.25em;
+            "
+          >
+            no TDD
+            <img
+              src="images/Giant_Banana_-_Koopa_Kart_8_Deluxe.webp"
+              style="width: 2em"
+            />
+          </h1>
           <div class="notes">
             not really a problem for the actual refactoring, but presumably
             you're making some other change to the code after the refactor and
@@ -699,7 +733,10 @@ exports[`Clickymajig unchecks the checkbox after 2 seconds 1`] = `
 
         <section>
           <div style="margin: auto">
-            <h2>Snapshot tests 👍</h2>
+            <h2 style="display: flex; align-items: center; gap: 0.25em">
+              Snapshot tests
+              <img src="images/StarMK8.webp" style="width: 1em" />
+            </h2>
             <ul style="list-style-type: '\2705">
               <li class="fragment">components that are too big</li>
               <li class="fragment">lots of presentation logic</li>
@@ -721,12 +758,26 @@ exports[`Clickymajig unchecks the checkbox after 2 seconds 1`] = `
         </section>
 
         <section>
-          <div class="emoji-image">🌽</div>
+          <div class="emoji-image">
+            <img
+              src="images/MK8_Asset_Model_Moo_Moo_(White).png"
+              style="width: 300px"
+            />
+          </div>
         </section>
 
         <section>
           <div style="margin: auto">
-            <h2>New requirements!</h2>
+            <h2 style="position: relative">
+              <img
+                src="images/MushroomMarioKart8.webp"
+                style="
+                  position: absolute;
+                  transform: scale(2) translate(-100%, -20%);
+                "
+              />
+              New requirements!
+            </h2>
             <ul>
               <li class="fragment">New product type radio button: plant</li>
               <li class="fragment">
@@ -793,9 +844,9 @@ exports[`Clickymajig unchecks the checkbox after 2 seconds 1`] = `
           </div>
 
           <img
-            src="images/bender-applause.png"
-            alt="bender holding applause sign"
+            src="images/Lakitu.png"
             class="bender fragment"
+            style="height: 100%"
           />
         </section>
       </div>
