--- a/index.html
+++ b/index.html
@@ -168,15 +168,21 @@
           </div>
         </section>
 
-        <section>
+        <!-- <section>
           <div class="inverse" style="display: flex">
             <h4 style="margin: auto">Change implementation, not behaviour</h4>
           </div>
-        </section>
-
+        </section> -->
 
         <section>
-          <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
             <h2>Safer refactoring</h2>
             <ul>
               <li class="fragment">Characterisation tests</li>
@@ -374,7 +380,14 @@ function formatDate(date) {
         </section>
 
         <section>
-          <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
             <h2>Snapshot test gotchas</h2>
             <ul>
               <li class="fragment">async rendering</li>
@@ -391,7 +404,14 @@ exports[`renders something asynchronously`] = `
         </section>
 
         <section>
-          <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
+          <div
+            style="
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+            "
+          >
             <h2>Snapshot test gotchas</h2>
             <ul>
               <li>async rendering</li>
