--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <style>
             .intro {
               display: grid;
-              grid-template-columns: 1fr 2fr;
+              grid-template-columns: 2fr 1fr;
               text-align: left;
               margin: auto;
             }
@@ -150,7 +150,7 @@
             .intro .zoidberg {
               border-radius: 62% 38% 63% 37% / 73% 52% 48% 27%;
               grid-column: 2;
-              grid-row: 1 / 4;
+              grid-row: 1 / 3;
             }
 
             .intro img {
@@ -158,10 +158,11 @@
             }
           </style>
           <div class="intro">
-            <div style="font-family: Futurama">@ErinJZimmer</div>
+            <div style="font-family: Futurama; align-self: end">
+              @ErinJZimmer
+            </div>
             <img class="zoidberg" src="images/zoidberg-knitting.gif" alt="" />
-            <img src="images/cash-app.svg" alt="" />
-            <img src="images/gde-logo.png" />
+            <img src="images/Atlassian-horizontal-blue-rgb.svg" alt="" />
             <a href="https://refactor-tractor.ez.codes"
               >https://refactor-tractor.ez.codes</a
             >
@@ -474,6 +475,7 @@ exports[`updates the state of the checkbox`] = `
           <div style="margin: auto">
             <h2>What did we learn?</h2>
             <ul>
+              <li class="fragment">Refactor THEN change</li>
               <li class="fragment">Characterisation tests</li>
               <li class="fragment">Snapshot tests</li>
             </ul>
@@ -506,112 +508,6 @@ exports[`updates the state of the checkbox`] = `
           <div class="fragment">
             <div>@ErinJZimmer</div>
           </div>
-        </section>
-
-        <section
-          data-background-color="black"
-          style="color: #00d54b; font-family: 'Cash Market'"
-        >
-          <svg
-            role="img"
-            data-logo=""
-            viewBox="0 0 30.19 44.03"
-            style="width: 50px; margin: auto"
-          >
-            <title>Cash App Logo</title>
-            <path
-              fill="#00D54B"
-              d="M25.51,13.79a1.27,1.27,0,0,0,1.8,0l2.5-2.6a1.36,1.36,0,0,0-.06-1.94A19.75,19.75,0,0,0,23,5.41l.79-3.8A1.33,1.33,0,0,0,22.54,0H17.7a1.32,1.32,0,0,0-1.28,1.06l-.7,3.38C9.28,4.77,3.82,8,3.82,14.74c0,5.8,4.51,8.29,9.28,10,4.51,1.72,6.9,2.36,6.9,4.78s-2.38,3.95-5.9,3.95a12.76,12.76,0,0,1-9.16-3.68,1.3,1.3,0,0,0-1.84,0h0L.4,32.49a1.36,1.36,0,0,0,0,1.92,17.64,17.64,0,0,0,7.79,4.4l-.74,3.57A1.33,1.33,0,0,0,8.72,44l4.85,0A1.33,1.33,0,0,0,14.87,43l.7-3.39c7.75-.52,12.47-4.79,12.47-11,0-5.74-4.7-8.16-10.4-10.13-3.26-1.21-6.08-2-6.08-4.53s2.63-3.38,5.27-3.38a13.39,13.39,0,0,1,8.7,3.29Z"
-            ></path>
-          </svg>
-          <h1 style="color: white; font-weight: 400; font-family: Agrandir">
-            We’re hiring!
-          </h1>
-          <div style="color: white">Engineers across all levels</div>
-          <a style="color: inherit" href="https://cash.app/careers"
-            >https://cash.app/careers</a
-          >
-          <svg
-            data-eyeball=""
-            viewBox="0 0 222.87 126.67"
-            style="width: 200px; position: absolute; right: 0; bottom: 100px"
-          >
-            <defs>
-              <style>
-                .cls1 {
-                  fill: black;
-                }
-                .cls2 {
-                  clip-path: url(#clip-path);
-                }
-                .cls3 {
-                  fill: #fff;
-                }
-                .cls4 {
-                  fill: #00d54b;
-                }
-              </style>
-              <clipPath
-                id="clip-path"
-                data-svg-origin="116.10500532150269 67.58157392501832"
-                transform="matrix(1,0,0,0.862,0,9.32626)"
-              >
-                <path
-                  d="M215.78,66.13C213.91,72,210.33,77,202.5,85.73l-4.64,5.15a55.26,55.26,0,0,0-3.65,4.43c-4,5.51-20.28,14.09-33.11,18.87a75.45,75.45,0,0,1-12.52,3.26l-6.23,1.09-16,2.76c-9.07,1.64-17.29,1.45-30.33-.14l-12.66-1.62c-1.24-.15-2.09-.22-3.3-.32l-.34,0c-6.09-.47-10.76-1.92-18.49-5.3l-5.63-2.49c-2.38-1-4.35-1.79-6.26-2.41l-.95-.3c-9.56-2.91-29.48-17.64-35.6-26.11l-.73-1c-3.2-4.73-5.35-8-7.39-14.76V64h0l1-3.25c1.8-5.63,5.18-10.5,12.39-18.69l5.95-6.65c1.52-1.73,2.38-2.79,3.23-4,4-5.53,20.26-14.14,33.08-18.94a71.78,71.78,0,0,1,11.21-3L75,8.87l20.1-3.48c9.47-1.71,18-1.43,32,.36L138.1,7.16c1.24.14,2.09.22,3.3.31l.34,0c5.72.45,10.2,1.76,17.15,4.74l7,3.08a66.55,66.55,0,0,0,7.2,2.72c9.56,2.92,29.46,17.7,35.57,26.21l.74,1.06c3.2,4.74,4.82,8.55,6.86,15.35l.65,2.24h0Z"
-                ></path>
-              </clipPath>
-            </defs>
-            <g id="Layer_2" data-name="Layer 2">
-              <g id="Layer_1-2" data-name="Layer 1">
-                <g id="eye">
-                  <g class="cls2">
-                    <g id="eye-ball">
-                      <path
-                        id="ball"
-                        class="cls3"
-                        d="M216.45,66.12C214.58,72,211,77,203.17,85.73l-4.64,5.15c-1.79,2-2.73,3.15-3.66,4.42-4,5.51-20.27,14.09-33.1,18.87a74.74,74.74,0,0,1-12.52,3.26l-6.23,1.1-16,2.75c-9.08,1.64-17.3,1.45-30.33-.14L84,119.52c-1.24-.14-2.1-.21-3.31-.31l-.33,0c-6.09-.47-10.77-1.91-18.5-5.29l-5.63-2.49c-2.37-1-4.34-1.8-6.25-2.42l-1-.3c-9.57-2.9-29.48-17.63-35.6-26.1l-.74-1.06c-3.2-4.72-5.34-8-7.38-14.75V64h0l1-3.25C8.2,55.14,11.59,50.27,18.8,42.08l5.95-6.66c1.52-1.73,2.37-2.78,3.22-4,4-5.53,20.27-14.15,33.09-18.94a70.69,70.69,0,0,1,11.21-3l3.43-.65L95.8,5.39c9.46-1.72,18-1.44,32,.36l10.92,1.41c1.24.14,2.1.21,3.31.31l.33,0c5.73.44,10.2,1.75,17.15,4.73l7,3.08a68.43,68.43,0,0,0,7.2,2.73c9.56,2.92,29.47,17.7,35.58,26.2L210,45.3c3.19,4.74,4.81,8.56,6.86,15.36l.65,2.23h0Z"
-                      ></path>
-                      <g
-                        id="moving"
-                        data-svg-origin="160.76499801635742 64.47492154598237"
-                        transform="matrix(1,0,0,1,-2.12848,4.974)"
-                      >
-                        <path
-                          id="iris"
-                          class="cls4"
-                          d="M80.27,9.4l2-.93a61.12,61.12,0,0,1,29.12-7.33h0a61.29,61.29,0,0,1,21.79,4l1.28.31c7.62,1.71,15.67,9.34,21.25,14,3.94,3.28,7.7,9.83,10.31,15,.32.62.64,1.26.94,1.9.67,1.38,1.23,2.6,1.66,3.53A38.59,38.59,0,0,1,171,47.31a61.6,61.6,0,0,1,1.73,10.16q.34,2.64.67,5.61c1.22,11.06-5.09,23.62-6.81,28.05S157,105.22,155.75,107s-14.39,10.37-15.6,11.45-12.76,4.81-14.61,5.34-16.69,1.7-18.81,1.7-18.23-4.91-19.63-5.6-10.46-5.67-12.3-6.58S65,104.16,64.06,103,55,89.55,54.26,88s-2.8-8.47-3.62-10.26-1.31-13.18-1.31-17.17a38.46,38.46,0,0,1,1.79-11.16c1.05-3.5,2.32-10.26,6.78-17.58a65,65,0,0,1,5.39-7.39,62.88,62.88,0,0,1,5.13-5.69C72.44,14.62,76.74,11,80.27,9.4Z"
-                        ></path>
-                        <g
-                          id="pupil"
-                          data-svg-origin="189.99499755859375 92.99206634521485"
-                          transform="matrix(1,0,0,1,0,0)"
-                        >
-                          <path
-                            id="Combined-Shape-Copy-2"
-                            d="M142.05,74.55l-.33.74a31.89,31.89,0,0,1-1.65,3.31c-.54,1-1,2-1.51,2.92-1.79,3.73-6.68,7-9.74,9.3s-9.49,3.69-12.09,4.22-6.7.35-12.54-.33-11.58-5.44-13.66-6.85-6.13-6.61-6.92-7.48S80,71.72,79.56,71s-1-7.16-1-8.18,1.11-8.8,1.36-9.9A51.82,51.82,0,0,1,83,47c.25-.47.52-.94.79-1.4l.27-.42c.53-.9.94-1.56,1.08-1.73l.52-.6a31.69,31.69,0,0,1,3.24-3.69c.5-.57.91-1,1.09-1.27A23.26,23.26,0,0,1,93.5,35.4a32.73,32.73,0,0,1,10.73-4.69,12.45,12.45,0,0,1,1.31-.41c.9-.17,4.7-.44,5.72-.64a15.88,15.88,0,0,1,3.54.33,31.88,31.88,0,0,1,4.27.69A32.58,32.58,0,0,1,142,50.15a15.92,15.92,0,0,1,1,2.62A32.29,32.29,0,0,1,144,67.45c0,.19,0,.39-.07.58A24.88,24.88,0,0,1,142.05,74.55Z"
-                          ></path>
-                          <path
-                            id="Combined-Shape-Copy-3"
-                            class="cls3"
-                            d="M94.84,34.32a10.41,10.41,0,0,1,2.56,1.57l.3.27a10.44,10.44,0,0,1,2.3,3,6.27,6.27,0,0,1,.66,1.59l0,.23a10.26,10.26,0,0,1,.12,5.14h0l.12-.66a6.64,6.64,0,0,1-.15.82,10.58,10.58,0,0,1-1.43,3.25,1.62,1.62,0,0,0-.1.18c-.56,1.17-2.1,2.19-3.06,2.93a6.32,6.32,0,0,1-1.67.78,10.31,10.31,0,0,1-6.14.46l-.3-.08.35.06a5.62,5.62,0,0,1-1.68-.51,10.36,10.36,0,0,1-4.71-3.89.65.65,0,0,0-.09-.11,1.83,1.83,0,0,1-.17-.31,10.24,10.24,0,0,1-1.1-2.65h0a1.28,1.28,0,0,1-.08-.32,10.4,10.4,0,0,1,0-4.61l.12-.47.06-.29A1.39,1.39,0,0,1,81,40.4a10.37,10.37,0,0,1,7.68-6.72l.25-.07.88-.09.26,0c.29,0,.54-.05.66-.08a6.72,6.72,0,0,1,1.33.14,7.72,7.72,0,0,1,1,.19h0l.16,0,.3.06a5.89,5.89,0,0,1,1.2.43Z"
-                          ></path>
-                        </g>
-                      </g>
-                    </g>
-                  </g>
-                </g>
-                <path
-                  id="outer-lid"
-                  class="outerLid"
-                  fill="#000"
-                  d="M0,64v1.32c1.64,6.43,2.35,9.88,4.66,13.29C12.55,90.28,19.6,98.7,27.42,103.46l10.17,5.84L40,110.64c8.1,4.48,14.74,7.5,21.19,9.35a49.08,49.08,0,0,0,6.23,1.38l2.7.43,9.19,1.62c15.64,2.78,25.5,3.76,37.56,3,16.77-1.07,31.44-4.29,49.57-10,12.27-3.85,31.79-17.48,41.08-27.79,3.27-3.63,5.91-6.3,8-10.26l1.34-2.51c1.26-2.59,4.4-8.73,4.24-8.35.39-.9.68-.92,1-1.79l.79-1.73-.29-1.14c-1.65-6.45-3.53-11.22-5.84-14.64-7.88-11.7-14.93-20.16-22.74-24.94l-7.67-4.42c-1.73-1-3.41-2-4.51-2.57l-.38-.21c-8.09-4.49-14.73-7.53-21.17-9.38A47.49,47.49,0,0,0,154,5.32l-2.7-.44-9.18-1.62C126.53.47,116.67-.52,104.62.25c-16.76,1.07-31.42,4.3-49.55,10C42.81,14.13,23.3,27.82,14,38.17A54.64,54.64,0,0,0,5.39,51l-.4.85c-1.3,2.86-3.38,8.08-3.45,8.27C1.15,61,.79,61.91.46,62.78L0,64m215.78,2.12C213.91,72,210.33,77,202.5,85.73l-4.64,5.15a55.26,55.26,0,0,0-3.65,4.43c-4,5.51-20.28,14.09-33.11,18.87a75.45,75.45,0,0,1-12.52,3.26l-6.23,1.09-16,2.76c-9.07,1.64-17.29,1.45-30.33-.14l-12.66-1.62c-1.24-.15-2.09-.22-3.3-.32l-.34,0c-6.09-.47-10.76-1.92-18.49-5.3l-5.63-2.49c-2.38-1-4.35-1.79-6.26-2.41l-.95-.3c-9.56-2.91-29.48-17.64-35.6-26.11l-.73-1c-3.2-4.73-5.35-8-7.39-14.76V64h0l1-3.25c1.8-5.63,5.18-10.5,12.39-18.69l5.95-6.65c1.52-1.73,2.38-2.79,3.23-4,4-5.53,20.26-14.14,33.08-18.94a71.78,71.78,0,0,1,11.21-3L75,8.87l20.1-3.48c9.47-1.71,18-1.43,32,.36L138.1,7.16c1.24.14,2.09.22,3.3.31l.34,0c5.72.45,10.2,1.76,17.15,4.74l7,3.08a66.55,66.55,0,0,0,7.2,2.72c9.56,2.92,29.46,17.7,35.57,26.21l.74,1.06c3.2,4.74,4.82,8.55,6.86,15.35l.65,2.24h0Z"
-                  data-svg-origin="111.435 63.3327605342865"
-                  transform="matrix(1,0,0,0.862,0,8.73992)"
-                ></path>
-              </g>
-            </g>
-          </svg>
-          <div class="notes">product, perks, people</div>
         </section>
       </div>
     </div>
