--- a/index.html
+++ b/index.html
@@ -130,9 +130,6 @@
           <h1 style="width: 50%; font-size: 3em; margin: 0; text-align: left">
             Getting on the refactor tractor
           </h1>
-          <div style="font-weight: bold; color: white">
-            Use arrow keys to navigate
-          </div>
         </section>
 
         <section>
@@ -478,7 +475,10 @@ exports[`updates the state of the checkbox`] = `
           <div style="margin: auto">
             <h2>What did we learn?</h2>
             <ul>
-              <li class="fragment">Refactor THEN change</li>
+              <li class="fragment">
+                Make the change easy, make the easy change
+              </li>
+              <li class="fragment">Change implementatin, not functionality</li>
               <li class="fragment">Characterisation tests</li>
               <li class="fragment">Snapshot tests</li>
             </ul>
