--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ exports[`updates the state of the checkbox`] = `
               <li class="fragment">
                 Make the change easy, make the easy change
               </li>
-              <li class="fragment">Change implementatin, not functionality</li>
+              <li class="fragment">Change implementation, not functionality</li>
               <li class="fragment">Characterisation tests</li>
               <li class="fragment">Snapshot tests</li>
             </ul>
